--- a/static/style/style.css
+++ b/static/style/style.css
@@ -35,11 +35,17 @@ html {font-size: 62.5%;}
     margin: 0 auto;
 }
 
-header {
+header section {
     background-color: #000000;
+}
+
+.header-backgroud {
     background-image: url("../img/header__background.png");
-    background-position: 80% 100%;
+    background-position: right 100%;
     background-repeat: no-repeat;
+    background-size: auto 100%;
+    margin: 0 auto;
+    max-width: 1106px;
 }
 
 header .container {
@@ -48,7 +54,6 @@ header .container {
     flex-direction: column;
     align-items: center;
     height: 31.5rem;
-    position: relative;
 }
 
 .header__logo {
@@ -75,10 +80,8 @@ header .container {
 }
 
 .header__degrade-borda {
-    width: 100%;
-    position: absolute;
+    max-width: 1106px;
     bottom: 0px;
-    left: calc(-50vw);
 }
 
 .header__n1, .header__n2, .header__n3, .header__n4 {
@@ -88,22 +91,22 @@ header .container {
 
 .header__n1 {
     background-color: var(--color-d1);
-    width: calc(100% - 3.6rem + 50vw);
+    width: calc(100% - 3.6rem);
 }
 
 .header__n2 {
     background-color: var(--color-d2);
-    width: calc(100% - 2.4rem + 50vw);
+    width: calc(100% - 2.4rem);
 }
 
 .header__n3 {
     background-color: var(--color-d3);
-    width: calc(100% - 1.2rem + 50vw);
+    width: calc(100% - 1.2rem);
 }
 
 .header__n4 {
     background-color: var(--color-d4);
-    width: calc(100% + 50vw);
+    width: calc(100%);
 }
 
 
@@ -197,7 +200,7 @@ header .container {
     content: "";
     height: 0.4rem;
     width: 8.8rem;
-    margin-bottom: 2.2rem;
+    margin: 1rem auto 2.2rem;
 }
 
 .main__section2__description,
